samples/_failures_safe/1761319064_ded5ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05c3b4d1.c: In function ‘process_input’:
./samples/SAFE/__tmp_05c3b4d1.c:130:40: error: expected ‘;’ at end of input
  130 |             current_state = STATE_ERROR
      |                                        ^
      |                                        ;
./samples/SAFE/__tmp_05c3b4d1.c:130:13: error: expected declaration or statement at end of input
  130 |             current_state = STATE_ERROR
      |             ^~~~~~~~~~~~~
./samples/SAFE/__tmp_05c3b4d1.c:130:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_05c3b4d1.c:130:13: error: expected declaration or statement at end of input
